--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <header>
       <div class="container">
         <div class="logo">
-          <img src="src/img/WEB/titre.png" alt="Logo du jeu" />
+          <div class="logo-image">
+            <img src="src/img/WEB/titre.png" alt="Logo du jeu" />
+          </div>
         </div>
         <div class="boulets">
           <img
