added tchat and leaderboard features

--- a/index.html
+++ b/index.html
@@ -168,6 +168,51 @@
               </div>
             </div>
           </div>
+
+          <div class="feature">
+            <h2>Leaderboard</h2>
+            <div class="feature-information">
+              <div class="feature-image">
+                <img
+                  src="src/img/WEB/leaderboard.png"
+                  alt="Thumbail du Leaderboard"
+                  class="feature-thumbnail"
+                />
+              </div>
+              <div class="feature-description">
+                <p>
+                  En vous connectant à Discord, vous <br />
+                  pouvez enregistrer vos scores dans <br />
+                  un tableau. Votre avatar, pseudo,<br />
+                  nombre de parties jouées et nombre<br />
+                  sont affichées.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="feature">
+            <h2>Tchat</h2>
+            <div class="feature-information">
+              <div class="feature-image">
+                <img
+                  src="src/img/WEB/tchat-2.png"
+                  alt="Thumbail du tchat"
+                  class="feature-thumbnail"
+                />
+              </div>
+              <div class="feature-description">
+                <p>
+                  Vous pouvez discuter sur le site avec<br />
+                  votre adversaire soit sur PC sur l'interface<br />
+                  à droite du jeu soit sur Mobile en cliquant<br />
+                  sur l'icône d'une bulle de discussion. En<br />
+                  recliquant sur l'icône, vous pouvez masquer<br />
+                  le tchat.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
