videos and image section

--- a/index.html
+++ b/index.html
@@ -215,6 +215,21 @@
           </div>
         </div>
       </section>
+      <section class="preview">
+        <div class="container">
+          <h2>Images & Vidéos</h2>
+          <div class="preview-boxes">
+            <div class="preview-box"></div>
+            <div class="preview-box"></div>
+            <div class="preview-box"></div>
+            <div class="preview-box"></div>
+            <div class="preview-box"></div>
+            <div class="preview-box"></div>
+            <div class="preview-box"></div>
+            <div class="preview-box"></div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="container">
